output/json problems fixed, messageBus problems Fixed